fixed "color picker it's show behind the..."
https://github.com/vedmack/angular-colorpicker/issues/1

--- a/angular-colorpicker-dr.css
+++ b/angular-colorpicker-dr.css
@@ -2,6 +2,7 @@
   display:none;
 }
 .color-picker-wrapper {
+	z-index: 90;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
